--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/utilities.css">
+    <title>Portfolio | ZubrScript</title>
+</head>
+<body>
+ <div class="navbar">
+   <div class="container">
+     <header>
+       <h1 class="logo">ZubrScript</h1>
+       <nav>
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="contact.html">Contact</a></li>
+           <li><a href="#projects">Projects</a></li>
+         </ul>
+       </nav>
+     </header>
+   </div>
+ </div> 
+</body>
+</html>
