--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Portfolio | ZubrScript</title>
 </head>
 <body>
+/*NavBar Starts*/
  <div class="navbar">
    <div class="container">
      <header>
@@ -23,6 +24,8 @@
        </nav>
      </header>
    </div>
- </div> 
+ </div>
+/*NavBar ends*/
+
 </body>
 </html>
