--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portfolio | ZubrScript</title>
 </head>
 <body>
-/*NavBar Starts*/
+<!-- NavBar Starts -->
  <div class="navbar">
    <div class="container">
      <header>
@@ -25,7 +25,7 @@
      </header>
    </div>
  </div>
-/*NavBar ends*/
+<!-- NavBar Ends -->
 
 </body>
 </html>
