--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="css/utilities.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/all.min.css">
+	<script src="css/jquery-3.6.0.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			$('#icon').click(function(){
+				$('ul').toggleClass('show');
+			});
+		});
+	</script>
 	<title>Portfolio | ZubrScript</title>
 </head>
 <body>
@@ -22,6 +30,7 @@
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="projects.html">Projects</a></li>
 					</ul>
+					<label id="icon"><i class="fas fa-bars fa-2x"></i></label>
 				</nav>
 			</div>
 		</div>
