--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 				<nav>
 					<ul class="sm">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
+						<li><a class="active" href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="projects.html">Projects</a></li>
 					</ul>
