--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 					<ul class="sm">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a class="active" href="contact.html">Contact</a></li>
 						<li><a href="projects.html">Projects</a></li>
 					</ul>
 					<label id="icon"><i class="fas fa-bars fa-2x"></i></label>
