--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h1 class="lead">ZubrScript</h1>
 				<nav>
 					<ul class="sm">
-						<li><a href="index.html">Home</a></li>
+						<li><a class="active" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="projects.html">Projects</a></li>
